--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
+<html>
 <head>
   <title>Github.io test</title>
 </head>
 <body>
   <div>Testing gihub io hosting</div>
 </body>
+</html>
